# AgentSchema

./: .markdownlint.json  PUBLISHING.md  README.md  clean.ps1
runtime/python/agentschema/: README.md  pyproject.toml
runtime/python/agentschema/tests/: test_agent_definition.py  test_agent_manifest.py  test_agentdefinition.py  test_agentmanifest.py  test_anonymous_connection.py  test_anonymousconnection.py  test_api_key_connection.py  test_apikeyconnection.py  test_array_property.py  test_arrayproperty.py  test_binding.py  test_code_configuration.py  test_code_interpreter_tool.py  test_codeinterpretertool.py  test_connection.py  test_container_agent.py  test_container_resources.py  test_container_scale.py  test_containeragent.py  test_context.py  test_custom_tool.py  test_customtool.py  test_environment_variable.py  test_environmentvariable.py  test_file_search_tool.py  test_filesearchtool.py  test_format.py  test_foundry_connection.py  test_function_tool.py  test_functiontool.py  test_load_agentdefinition.py  test_load_agentmanifest.py  test_load_anonymousconnection.py  test_load_apikeyconnection.py  test_load_arrayproperty.py  test_load_binding.py  test_load_codeinterpretertool.py  test_load_connection.py  test_load_customtool.py  test_load_environmentvariable.py  (+61 more)
runtime/rust/agentschema/: Cargo.toml  README.md
runtime/rust/agentschema/src/: agent_definition.rs  agent_manifest.rs  binding.rs  code_configuration.rs  connection.rs  container_resources.rs  context.rs  environment_variable.rs  format.rs  lib.rs  mcp_server_approval_mode.rs  model.rs  model_options.rs  parser.rs  property.rs  property_schema.rs  protocol_version_record.rs  resource.rs  template.rs  tool.rs  toolbox_tool.rs
runtime/rust/agentschema/tests/: agent_definition_test.rs  agent_manifest_test.rs  anonymous_connection_test.rs  api_key_connection_test.rs  array_property_test.rs  binding_test.rs  code_configuration_test.rs  code_interpreter_tool_test.rs  connection_test.rs  container_agent_test.rs  container_resources_test.rs  custom_tool_test.rs  environment_variable_test.rs  file_search_tool_test.rs  format_test.rs  foundry_connection_test.rs  function_tool_test.rs  mcp_server_approval_mode_test.rs  mcp_server_tool_always_require_approval_mode_test.rs  mcp_server_tool_never_require_approval_mode_test.rs  mcp_tool_test.rs  model_test.rs  (+21 more)
(+680 files in other folders)
