[project]
name = "agentschema"
version = "1.0.0b3"
description = "Declarative Agent Schema"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Microsoft" }]
keywords = ["agent", "schema", "agentschema", "declarative", "ai", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "aiofiles>=24.1.0",
    "ruff>=0.13.3",
    "black>=25.9.0",
]

[project.urls]
Homepage = "https://microsoft.github.io/AgentSchema/"
Documentation = "https://microsoft.github.io/AgentSchema/"
Repository = "https://github.com/microsoft/AgentSchema"
Issues = "https://github.com/microsoft/AgentSchema/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-aiofiles",
    "types-PyYAML",
    "pytest-cov",
    "black",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
agentschema = { workspace = true }

[dependency-groups]
dev = ["agentschema", "pytest>=8.4.2"]
