[package]
name = "agentschema"
version = "1.0.0-beta.10"
edition = "2021"
description = "AgentSchema Rust Runtime - declarative AI agent definitions"
license = "MIT"
repository = "https://github.com/microsoft/AgentSchema"
readme = "README.md"
keywords = ["ai", "agents", "schema", "yaml", "declarative"]
categories = ["development-tools", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
